--- a/sceleton.ui
+++ b/sceleton.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>761</width>
-    <height>781</height>
+    <width>923</width>
+    <height>834</height>
    </rect>
   </property>
   <property name="palette">
@@ -505,11 +505,20 @@
         </item>
         <item>
          <layout class="QFormLayout" name="formLayout">
+          <property name="sizeConstraint">
+           <enum>QLayout::SetMinimumSize</enum>
+          </property>
           <property name="fieldGrowthPolicy">
            <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
           </property>
           <item row="0" column="1">
            <widget class="QDoubleSpinBox" name="spinBoxXTolValue">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>20</height>
+             </size>
+            </property>
             <property name="decimals">
              <number>4</number>
             </property>
@@ -533,6 +542,12 @@
           </item>
           <item row="1" column="1">
            <widget class="QDoubleSpinBox" name="spinBoxFTolValue">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>20</height>
+             </size>
+            </property>
             <property name="decimals">
              <number>2</number>
             </property>
@@ -701,6 +716,20 @@
         <property name="fieldGrowthPolicy">
          <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
         </property>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_13">
+          <property name="text">
+           <string>Start direction</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QDoubleSpinBox" name="doubleSpinBoxStartDirection">
+          <property name="decimals">
+           <number>5</number>
+          </property>
+         </widget>
+        </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_6">
           <property name="text">
@@ -807,7 +836,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>761</width>
+     <width>923</width>
      <height>23</height>
     </rect>
    </property>
