added features debugged

--- a/sceleton.ui
+++ b/sceleton.ui
@@ -429,7 +429,7 @@
    </palette>
   </property>
   <property name="windowTitle">
-   <string>Injection Optimizer V 0.3.0</string>
+   <string>Injection Optimizer V 1.0.0 Lewis release</string>
   </property>
   <property name="windowIcon">
    <iconset>
