--- a/sceleton.ui
+++ b/sceleton.ui
@@ -709,6 +709,12 @@
         <property name="selectionMode">
          <enum>QAbstractItemView::MultiSelection</enum>
         </property>
+        <property name="selectionBehavior">
+         <enum>QAbstractItemView::SelectItems</enum>
+        </property>
+        <property name="selectionRectVisible">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item>
@@ -766,7 +772,10 @@
         <item row="1" column="0">
          <widget class="QDoubleSpinBox" name="doubleSpinBoxStartDirection">
           <property name="decimals">
-           <number>5</number>
+           <number>6</number>
+          </property>
+          <property name="minimum">
+           <double>-99.989999999999995</double>
           </property>
          </widget>
         </item>
