--- a/sceleton.ui
+++ b/sceleton.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1303</width>
-    <height>834</height>
+    <width>1231</width>
+    <height>884</height>
    </rect>
   </property>
   <property name="palette">
@@ -433,7 +433,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>smiley_rainbow_round.jpg</normaloff>smiley_rainbow_round.jpg</iconset>
+    <normaloff>../../../../../../../user/leiop/OP_DATA/Software/LEIR-Multiparameteroptimizer/smiley_rainbow_round.jpg</normaloff>../../../../../../../user/leiop/OP_DATA/Software/LEIR-Multiparameteroptimizer/smiley_rainbow_round.jpg</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -722,28 +722,28 @@
         <property name="fieldGrowthPolicy">
          <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
         </property>
-        <item row="0" column="0">
+        <item row="1" column="0">
          <widget class="QLabel" name="label_13">
           <property name="text">
            <string>Start direction</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="0">
+        <item row="4" column="0">
          <widget class="QLabel" name="label_6">
           <property name="text">
            <string>Start time</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
+        <item row="4" column="1">
          <widget class="QLabel" name="label_7">
           <property name="text">
            <string>End Time</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
+        <item row="5" column="0">
          <widget class="QDoubleSpinBox" name="doubleSpinBoxStartTime">
           <property name="enabled">
            <bool>false</bool>
@@ -756,7 +756,7 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="1">
+        <item row="5" column="1">
          <widget class="QDoubleSpinBox" name="doubleSpinBoxEndTime">
           <property name="enabled">
            <bool>false</bool>
@@ -769,7 +769,7 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
+        <item row="3" column="0">
          <widget class="QDoubleSpinBox" name="doubleSpinBoxStartDirection">
           <property name="decimals">
            <number>6</number>
@@ -779,20 +779,43 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
+        <item row="1" column="1">
          <widget class="QLabel" name="label_14">
           <property name="text">
            <string>Minimal accepted change</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="3" column="1">
          <widget class="QDoubleSpinBox" name="doubleSpinBoxMinimalAcceptedChange">
           <property name="decimals">
            <number>6</number>
           </property>
           <property name="singleStep">
            <double>0.000001000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_15">
+          <property name="text">
+           <string>Interval bounds</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QDoubleSpinBox" name="doubleSpinBoxIntervalBounds">
+          <property name="decimals">
+           <number>6</number>
+          </property>
+          <property name="minimum">
+           <double>-99.989999999999995</double>
+          </property>
+          <property name="singleStep">
+           <double>0.000001000000000</double>
+          </property>
+          <property name="value">
+           <double>99.989999999999995</double>
           </property>
          </widget>
         </item>
@@ -871,7 +894,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1303</width>
+     <width>1231</width>
      <height>23</height>
     </rect>
    </property>
